--- a/client/package.json
+++ b/client/package.json
@@ -17,5 +17,8 @@
     "react-dom": "^19.1.0",
     "react-router-dom": "^6.30.0",
     "vite": "^6.2.6"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^4.3.4"
   }
 }
